# OSLAroused

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Debug.ppj  OSLAroused.esp  OVERVIEW.md  README.md  Release.ppj  SexLabAroused.esm  build_and_test.bat  build_with_tests.bat  package.ps1  setup_build_environment.ps1  vcpkg-configuration.json  vcpkg.json  xmake.lua
.claude/: settings.local.json
OSLAroused FOMOD/: OSLAroused FOMOD 0.1.3.7z  OSLAroused FOMOD 0.1.4.7z  OSLAroused FOMOD 2.0.0.7z  OSLAroused FOMOD 2.0.1.7z  OSLAroused FOMOD 2.0.2.7z  OSLAroused FOMOD 2.0.3.7z  OSLAroused FOMOD 2.0.4.7z  OSLAroused FOMOD 2.1.0.7z  OSLAroused FOMOD 2.2.0.7z  OSLAroused FOMOD 2.2.1.7z
OSLAroused FOMOD/Fomod/: info.xml  moduleconfig.xml
OSLAroused FOMOD/Patches/Devious Devices/5.2/Scripts/Source/: zadLibs.psc
OSLAroused FOMOD/Patches/Radiant Prostitution/Scripts/: mf_handler.pex
SSEEdit Backups/: OSLAroused.esp.backup.2022_01_29_23_37_27
Scripts/Source/: OArousedScript.psc  OSLArousedNative.psc  OSLArousedNativeActor.psc  OSLArousedNativeConfig.psc  OSLAroused_AdapterDebug.psc  OSLAroused_AdapterOStim.psc  OSLAroused_AdapterSexLab.psc  OSLAroused_AdapterToys.psc  OSLAroused_ArousalDisplayWidget.psc  OSLAroused_Debug.psc  OSLAroused_MCM.psc  OSLAroused_Main.psc  OSLAroused_ModInterface.psc  slaConfigScr.psc  slaFrameworkScr.psc  slaMainScr.psc
contrib/Distribution/: OSL Aroused FOMOD 2.3.0.7z
contrib/Distribution/Assets/: OSLAroused.esp  SexLabAroused.esm
contrib/Distribution/Assets/interface/Translations/: OSLAroused_CZECH.txt  OSLAroused_ENGLISH.txt  OSLAroused_FRENCH.txt  OSLAroused_JAPANESE.txt  OSLAroused_PORTUGUESE.txt  OSLAroused_langUpdate.bat
contrib/Distribution/Config/: OSLAroused.ini
contrib/Distribution/PapyrusSources/: OSLArousedNative.psc  OSLArousedNativeActor.psc  OSLArousedNativeConfig.psc  OSLAroused_AdapterOStim.psc  OSLAroused_AdapterSexLab.psc  OSLAroused_ArousalBar.psc  OSLAroused_MCM.psc  OSLAroused_Main.psc  OSLAroused_ModInterface.psc  slaConfigScr.psc  slaFrameworkScr.psc  slaMainScr.psc
contrib/Distribution/PapyrusTestSources/: OSLArousedTest.psc
contrib/Distribution/Patches/Devious Devices/5.1/Scripts/: zadLibs.pex
contrib/Distribution/Patches/Devious Devices/5.2/Scripts/: zadLibs.pex
contrib/Distribution/Patches/Devious Devices/5.2/Scripts/Source/: zadLibs.psc
contrib/Distribution/fomod/: ModuleConfig.xml  info.xml
include/Sample/: Sample.h
interface/Translations/: OSLAroused_RUSSIAN.txt
src/: Config.cpp  Config.h  Main.cpp  PCH.h  PersistedData.cpp  PersistedData.h  RuntimeEvents.cpp  RuntimeEvents.h  Settings.cpp  Settings.h
src/Integrations/: ANDIntegration.cpp  ANDIntegration.h  DevicesIntegration.cpp  DevicesIntegration.h
src/Managers/: ActorStateManager.cpp  ActorStateManager.h  ArousalManager.cpp  ArousalManager.h  SceneManager.cpp  SceneManager.h
src/Managers/ArousalSystem/: ArousalSystemOSL.cpp  ArousalSystemOSL.h  ArousalSystemSLA.cpp  ArousalSystemSLA.h  IArousalSystem.h
src/Papyrus/: Papyrus.cpp  Papyrus.h  PapyrusActor.cpp  PapyrusConfig.cpp  PapyrusConfig.h  PapyrusInterface.cpp  PapyrusInterface.h
src/Utilities/: DebugNotification.h  LRUCache.h  Spinlock.h  Ticker.h  Utils.cpp  Utils.h
test/: test_ANDIntegration.cpp  test_LRUCache.cpp  test_OSLArousal.cpp  test_PersistedData.cpp  test_SLAExposure.cpp
tools/: OSLAroused_langUpdate.bat
